--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -64,13 +64,12 @@
         </div>
         <p class="checkout__button" style="margin-left: 50px;">En savoir plus</p>
       </div>
-
     </div>
 
     <div class="home-example-etape-container">
       <div class="home-example-etape-title">
         <p class="etape-number">2</p>
-        <p class="etape-text">Ensuite nous calculons <strong>le nombre d'arbres à planter</strong> pour compenser le co2 émis par votre trajet.</p>
+        <p class="etape-text">Ensuite, nous calculons <strong>le nombre d'arbres à planter</strong> pour compenser le co2 émis par votre trajet.</p>
       </div>
       
       <div class="home-example-section-container double-div">
@@ -109,7 +108,7 @@
     <div class="home-example-etape-container" style="margin-top: 85px;">
       <div class="home-example-etape-title last-etape">
         <p class="etape-number">4</p>
-        <p class="etape-text last-etape-text">Dernière étape,<br>Vous décidez ou non de faire un don à l'une de nos associations partenaires afin de compenser le reste des émissions de co2 de votre trajet.</p>
+        <p class="etape-text last-etape-text">Dernière étape,<br>vous décidez ou non de faire un don à l'une de nos associations partenaires afin de compenser le reste des émissions de co2 de votre trajet.</p>
       </div>
     </div>
     <div style="display:flex;justify-content: center;">
