--- a/app/assets/stylesheets/components/_nice-home-example.scss
+++ b/app/assets/stylesheets/components/_nice-home-example.scss
@@ -50,13 +50,14 @@
 
 .etape-number {
 	background-color: black;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     text-align: center;
-    line-height: 30px;
+    line-height: 40px;
     color: white;
-    margin-right: 10px;
+    margin-right: 25px;
+    font-size: 25px;
 }
 
 .treep-number-positioning {
@@ -128,34 +129,35 @@
 
 .home-example-etape-title {
 	display: flex;
-    width: 540px;
-    margin-left: 266px;
-    margin-bottom: 25px;
+    justify-content: center;
+    align-items: center;
 }
 
 .etape-text {
-	width: 500px;
+	width: 650px;
+	font-size: 21px;
 }
 
 .last-etape {
 	background: #FFFFFF;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 	border-radius: 15px;
+	margin: auto;
 	margin-top: 130px;
-	width: 680px;
+	width: 720px;
     align-items: center;
     padding: 10px;
 }
 
 .last-etape-text {
-	width: 660px;
+	width: 650px;
 }
 
 .go-button-home {
 	width: 260px;
     display: inline-block;
     text-align: center;
-    margin: 10px 0px 40px 0px;
+    margin: 30px 0px 40px 0px;
 }
 
 .fly-way-style {
@@ -173,6 +175,13 @@
     background-color: #C4C4C4;
 }
 
+.slider-main-infos {
+	width: 600px;
+    height: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
 
 
