done the a propos1

--- a/app/assets/stylesheets/pages/_lesarbres.scss
+++ b/app/assets/stylesheets/pages/_lesarbres.scss
@@ -56,12 +56,12 @@ li a {
 
 
 
-@media only screen and (max-width: 1132px) {
+/* @media only screen and (max-width: 1132px) {
   ul .li-before {
   padding-right: 0.7vw;
   padding-left: 0.7vw;
   }
-}
+} */
 
 
 /*  * * * * * * * * * * *
@@ -69,8 +69,7 @@ li a {
       * * * * * * * * * * *   */
 
 
-.about-page {
-  background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1554994799/Lake_white_block.png');
+/* .about-page {
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -89,17 +88,17 @@ li a {
   padding-top: 20px;
   font-family: raleway
 }
-
+ */
 /*  * * * * * * * * * * *
       *  MEDIA   QUERIES about  *
       * * * * * * * * * * *   */
-
+/*
 @media only screen and (max-width: 1200px) {
   .titre-page h1 {
     padding-top: 3vw;
     padding-bottom: 6vw;
   }
-}
+} */
 
 
 
