--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -56,12 +56,12 @@ li a {
 
 
 
-@media only screen and (max-width: 1132px) {
+/* @media only screen and (max-width: 1132px) {
   ul .li-before {
   padding-right: 0.7vw;
   padding-left: 0.7vw;
   }
-}
+} */
 
 
 /*  * * * * * * * * * * *
@@ -70,7 +70,7 @@ li a {
 
 
 .about-page {
-  background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1554994799/Lake_white_block.png');
+  background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1561627528/lake_mount.jpg');
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -78,28 +78,96 @@ li a {
 .titre-page h1 {
   text-align: center;
   color: white;
-  padding-top: 5vw;
-  padding-bottom: 9vw;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  font-size: 50px;
 }
 
-.text-apropos {
-  text-align: center;
-  padding-left: 18vw;
-  padding-right: 14vw;
-  padding-top: 20px;
-  font-family: raleway
+.white_block {
+  margin: 100 auto;
+  width: 100%;
 }
+
+.white_block svg {
+  width: 100%;
+  padding-right: 3vw;
+}
+
+.intro-apropos {
+  text-align: center;
+  font-size: 20px;
+  padding-top: 45px;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.texte-apropos {
+  background-image: url(https://res.cloudinary.com/tark-industries/image/upload/v1561647556/white_block.svg);
+  background-size: 100% auto;
+  background-position: top;
+  background-repeat: no-repeat;
+  left: 14%;
+  right: 10%;
+  margin-top: 3vw;
+  min-height: 75vh;
+}
+
+  .questions-apropos {
+    padding-top: 35px;
+  }
+
+  .questions-apropos ul {
+    padding-left: 12%;
+  }
+
+  .questions-apropos div {
+    padding-bottom: 25px;
+  }
+
+
+.bouton-apropos {
+  background-color: rgb(54, 172, 184);
+  border-radius: 8px;
+  text-align: center;
+  color: white !important;
+  padding: 11px 0px;
+  font-size: 20px;
+}
+
+.texte-question {
+  background-color: rgb(244, 241, 241);
+  border: 1px solid #E1DFDF;
+  border-radius: 5px;
+  margin-left: 180px;
+  font-size: 18px;
+  line-height: 25px;
+  width: 80%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*  * * * * * * * * * * *
       *  MEDIA   QUERIES about  *
       * * * * * * * * * * *   */
 
-@media only screen and (max-width: 1200px) {
+/* @media only screen and (max-width: 1200px) {
   .titre-page h1 {
-    padding-top: 3vw;
-    padding-bottom: 6vw;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    font-size: 45px;
   }
-}
+} */
 
 
 
