--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -53,33 +53,167 @@
       <h1>A propos de Skytree'p</h1>
     </div>
 
-    <div class="text-apropos">
-      Nous sommes une toute jeune entreprise qui a <strong>encore beaucoup à apprendre</strong> , notamment sur la compensation carbone et les pollutions liées à l’avion. Skytree’p est partit d’un constat négatif : <strong>nous n’avons pas le pouvoir d’arrêter l’avion</strong>  et pire, chaque année il y en aura de plus en plus.
-    </div>
+    <div class="texte-apropos">
+      <p class="intro-apropos">Skytree’p est une entreprise de l’économie sociale et solidaire qui lutte contre le réchauffement climatique.
+      </p>
 
-    <div class="text-apropos">
-      A la base du projet, en 2018, nous cherchions une solution pour réduire les émissions carbones liées aux transports aériens. Après beaucoup de réflexion, nous nous sommes dit que la solution demeurait dans l’éducation. Il nous fallait faire comprendre au maximum de personne l’impact écologique de l’avion. Mais comment ?
-    </div>
+      <div class="questions-apropos">
+        <div class="question1">
+          <ul>
+            <li>
+              <p>
+                <a style="width: 200px; margin-right: 10px;" class="btn bouton-apropos" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  Qui sommes nous ?
+                </a>
+              </p>
+            </li>
+            <li>
 
-    <div class="text-apropos">
-      Les idées fusent mais peu sont convaincantes. Alors nous décortiquons la chaîne du processus de prendre l’avion, de la naissance de l’idée de voyager dans la tête du consommateur jusqu’aux pieds dans l’eau. Il s’agissait ensuite de <strong>trouver la meilleure place</strong>  dans cette chaîne <strong>pour avoir le plus d’impact !</strong>  Ce sera au niveau de l’achat en tant que comparateur.
-    </div>
+              <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.9393 13.0607C11.5251 13.6464 12.4749 13.6464 13.0607 13.0607L22.6066 3.51472C23.1924 2.92893 23.1924 1.97918 22.6066 1.3934C22.0208 0.807612 21.0711 0.807612 20.4853 1.3934L12 9.87868L3.51472 1.3934C2.92893 0.807612 1.97918 0.807612 1.3934 1.3934C0.807612 1.97918 0.807612 2.92893 1.3934 3.51472L10.9393 13.0607ZM10.5 10.5V12H13.5V10.5H10.5Z" fill="black"/>
+              </svg>
+            </li>
+          </ul>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body texte-question">
+              Nous avons créé cette structure avec deux objectifs : <br>
+              &nbsp &nbsp ⁃ Informer nos utilisateurs sur l’impact écologique de l’avion pour qu’ils l’utilisent de la façon là moins polluante possible. <br>
+              &nbsp &nbsp ⁃ Créer une synergie avec nos utilisateurs pour compenser l’impact de ces trajets.
+            </div>
+          </div>
+        </div>
 
-    <div class="text-apropos">
-      Tout commence alors pour Skytree’p. Nous commençons à imaginer la solution, l’idée de <strong>la dette écologique</strong>  se crée, nous décidons de <strong>reverser 80% du profit,</strong>  on se renseigne sur les arbres, on les adopte et enfin on commence à coder le site internet.
-    </div>
+        <div class="question2">
+          <ul>
+            <li>
+              <p>
+                <a style="width: 380px; margin-right: 10px;" class="btn bouton-apropos" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  Quelle est notre position face à l'avion ?
+                </a>
+              </p>
+            </li>
+            <li>
 
-    <div class="text-apropos">
-      Notre vision aujourd’hui.
-    </div>
+              <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.9393 13.0607C11.5251 13.6464 12.4749 13.6464 13.0607 13.0607L22.6066 3.51472C23.1924 2.92893 23.1924 1.97918 22.6066 1.3934C22.0208 0.807612 21.0711 0.807612 20.4853 1.3934L12 9.87868L3.51472 1.3934C2.92893 0.807612 1.97918 0.807612 1.3934 1.3934C0.807612 1.97918 0.807612 2.92893 1.3934 3.51472L10.9393 13.0607ZM10.5 10.5V12H13.5V10.5H10.5Z" fill="black"/>
+              </svg>
+            </li>
+          </ul>
+          <div class="collapse" id="collapseExample2">
+            <div class="card card-body texte-question">
+              Skytree’p n’est en aucun cas une incitation à prendre l’avion mais plutôt une proposition pour l’utiliser raisonnablement quand on ne peut pas faire autrement. Il est de notre devoir de chacun de ne pas consommer plus que ce que la terre a à nous offrir. (1,7 tonnes de Co2 / an / habitant.)
+              <br> <br>
+              Nous sommes certains de l’urgence climatique qui pèse sur l’humanité en ce moment même. Il faut donc rapidement réagir pour garder intact le fragile équilibre qui tient encore aujourd’hui.
+              <br> <br>
+              Notre position face à l’avion s’apparente à de l’idéalisme pragmatique. Nous savons que la solution pour endiguer le réchauffement climatique est de réduire drastiquement notre consommation. Mais nous savons aussi que chaque année, il y aura de plus en plus de passagers.
+              <br> <br>
+              Alors que faire ? Si nous ne pouvons pas stopper nos émissions de gaz à effet de serre, nous pouvons au minimum les réduire et les compenser.
+            </div>
+          </div>
+        </div>
 
-    <div class="text-apropos">
-      Skytree’p est imparfait, il est encore compliqué de parfaitement déterminer la globalité des pollutions engendré par un avion. Au fil de notre évolution, <strong>notre mission est de nous rapprocher au plus près de la réalité,</strong>  que ce soit pour mieux comprendre la pollution de l’avion ou bien analyser le rôle clef des arbres dans la compensation.
-    </div>
+        <div class="question3">
+          <ul>
+            <li>
+              <p>
+                <a style="width: 500px; margin-right: 10px;" class="btn bouton-apropos" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  Comment réduire les émissions de gaz à effet de serre ?
+                </a>
+              </p>
+            </li>
+            <li>
 
-    <div style="padding-bottom: 50px" class="text-apropos">
-      Nous chercherons toujours <strong>la transparence</strong>  et <strong>l’honnêteté,</strong>  nous chercherons toujours à guider nos utilisateurs vers des meilleurs pratiques et <strong>à terme, nous rechercherons scientifiquement des moyens pour combattre le réchauffement climatique.</strong>
+              <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.9393 13.0607C11.5251 13.6464 12.4749 13.6464 13.0607 13.0607L22.6066 3.51472C23.1924 2.92893 23.1924 1.97918 22.6066 1.3934C22.0208 0.807612 21.0711 0.807612 20.4853 1.3934L12 9.87868L3.51472 1.3934C2.92893 0.807612 1.97918 0.807612 1.3934 1.3934C0.807612 1.97918 0.807612 2.92893 1.3934 3.51472L10.9393 13.0607ZM10.5 10.5V12H13.5V10.5H10.5Z" fill="black"/>
+              </svg>
+            </li>
+          </ul>
+          <div class="collapse" id="collapseExample3">
+            <div class="card card-body texte-question">
+              Notre objectif n°1 est de vous faire prendre conscience de votre impact écologique. Ainsi, sur chaque billet, vous pouvez voir la distance parcourue, la quantité de co2 émise et la dette  écologique du trajet.
+              Dès l’automne prochain, nous vous proposerons également d’acheter des billets de trains pour de courtes distances comme Paris-Marseille.
+              Notre priorité, c’est de faire de vous des voyageurs plus responsables utilisant les meilleures pratiques.
+            </div>
+          </div>
+        </div>
+
+        <div class="question4">
+          <ul>
+            <li>
+              <p>
+                <a style="width: 525px; margin-right: 10px;" class="btn bouton-apropos" data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Comment compenser les émissions de gaz à effet de serre ?
+                </a>
+              </p>
+            </li>
+            <li>
+
+              <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.9393 13.0607C11.5251 13.6464 12.4749 13.6464 13.0607 13.0607L22.6066 3.51472C23.1924 2.92893 23.1924 1.97918 22.6066 1.3934C22.0208 0.807612 21.0711 0.807612 20.4853 1.3934L12 9.87868L3.51472 1.3934C2.92893 0.807612 1.97918 0.807612 1.3934 1.3934C0.807612 1.97918 0.807612 2.92893 1.3934 3.51472L10.9393 13.0607ZM10.5 10.5V12H13.5V10.5H10.5Z" fill="black"/>
+              </svg>
+            </li>
+          </ul>
+          <div class="collapse" id="collapseExample4">
+            <div class="card card-body texte-question">
+              Notre proposition :
+              - Utiliser 80% de notre bénéfice pour planter des arbres.
+              - Et donc compenser gratuitement 20% de la dette écologique de votre trajet rien qu’en passant par Skytree’p.
+              - Vous pouvez en faire plus en donnant davantage. C’est de votre responsabilité.
+            </div>
+          </div>
+        </div>
+
+        <div class="question5">
+          <ul>
+            <li>
+              <p>
+                <a style="width: 297px; margin-right: 10px;" class="btn bouton-apropos" data-toggle="collapse" href="#collapseExample5" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  Pourquoi planter des arbres ?
+                </a>
+              </p>
+            </li>
+            <li>
+
+              <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.9393 13.0607C11.5251 13.6464 12.4749 13.6464 13.0607 13.0607L22.6066 3.51472C23.1924 2.92893 23.1924 1.97918 22.6066 1.3934C22.0208 0.807612 21.0711 0.807612 20.4853 1.3934L12 9.87868L3.51472 1.3934C2.92893 0.807612 1.97918 0.807612 1.3934 1.3934C0.807612 1.97918 0.807612 2.92893 1.3934 3.51472L10.9393 13.0607ZM10.5 10.5V12H13.5V10.5H10.5Z" fill="black"/>
+              </svg>
+            </li>
+          </ul>
+          <div class="collapse" id="collapseExample5">
+            <div class="card card-body texte-question">
+              C’est une véritable aubaine pour la planète, parce que :
+              - Vous retirez du Co2 de l’atmosphère.
+              - Vous recréez un écosystème qui sauve notre fragile biodiversité
+              - Vous enrichissez et refroidissez les sols.
+              Cependant la compensation carbone n’est utile que si l’industrie poursuit sa transition vers la neutralité carbone.
+
+              « Si nous voulons réellement éviter des changements planétaires catastrophiques, nous devons réduire nos émissions de 45 % d’ici à 2030, indique l’ONU Environnement. Or les arbres plantés aujourd’hui ne peuvent pas pousser suffisamment vite pour atteindre cet objectif. »
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
