--- a/app/assets/stylesheets/components/_nice-home-example.scss
+++ b/app/assets/stylesheets/components/_nice-home-example.scss
@@ -6,8 +6,10 @@
 	    text-indent: 1px;
 	    text-overflow: '';
 	    text-align-last: center;
-	    height: 40px;
-	    width: 100px;
+	    height: 50px;
+    	width: 120px;
+	    border: 1px solid #E0E0E0;
+	    background-color: #F4F4F4;
 
 	    &:hover {
 	    	background-color: rgba(171, 181, 169, 0.7)
@@ -32,7 +34,8 @@
 }
 
 .home-example-etape-container {
-	margin-top: 70px;
+	padding: 40px 0px;
+	margin: 20px 0px;
 }
 
 
@@ -125,6 +128,7 @@
 
 .double-div {
 	align-items: flex-end;
+	margin-top: 40px;
 }
 
 .home-example-etape-title {
@@ -143,7 +147,7 @@
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 	border-radius: 15px;
 	margin: auto;
-	margin-top: 130px;
+	margin-top: 75px;
 	width: 720px;
     align-items: center;
     padding: 10px;
@@ -157,7 +161,8 @@
 	width: 260px;
     display: inline-block;
     text-align: center;
-    margin: 30px 0px 40px 0px;
+    margin: 20px 0px 20px 0px;
+    height: 50px;
 }
 
 .fly-way-style {
@@ -176,14 +181,51 @@
 }
 
 .slider-main-infos {
-	width: 600px;
-    height: 130px;
+	width: 650px;
+    height: 140px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    div {
+    	display: flex;
+    	align-items: flex-end;
+    }
 }
 
 
+.le-vrai-pouvoir-all-container {
+	h3 {
+		text-align: center;
+		margin-top: 40x;
+	}
+}
 
+.le-vrai-pouvoir-div-container {
+	display: flex;
+	justify-content: space-around;
+	margin: 40px 0px;
+}
 
+.le-vrai-pouvoir-div {
+	width: 340px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35);
+
+    img {
+    	width: 340px;
+    }
+
+    h4 {
+    	text-align: center;
+    	margin-top: 25px;
+    	margin-bottom: 40px;
+	}
+
+    p {
+    	text-align: justify;
+    	padding: 0px 26px;
+    	margin-bottom: 15px;
+    }
+}
+    
 
