--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -53,6 +53,15 @@ li a {
   width: 20px;
 }
 
+/*------------- menu drop down------------ */
+
+.navba-propos {
+  background-color: transparent !important;
+  border: none;
+  font-size: 14px;
+}
+
+
 
   /*  * * * * * * * * * * *
       *  MEDIA   QUERIES  *
