--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -131,7 +131,7 @@
           <div class="collapse" id="collapseExample3">
             <div class="card card-body texte-question">
               Notre objectif n°1 est de vous faire prendre conscience de votre impact écologique. Ainsi, sur chaque billet, vous pouvez voir la distance parcourue, la quantité de co2 émise et la dette  écologique du trajet.
-              Dès l’automne prochain, nous vous proposerons également d’acheter des billets de trains pour de courtes distances comme Paris-Marseille.
+              Dès l’automne prochain, nous vous proposerons également d’acheter des billets de trains pour de courtes distances comme Paris-Marseille. <br>
               Notre priorité, c’est de faire de vous des voyageurs plus responsables utilisant les meilleures pratiques.
             </div>
           </div>
@@ -155,9 +155,9 @@
           </ul>
           <div class="collapse" id="collapseExample4">
             <div class="card card-body texte-question">
-              Notre proposition :
-              - Utiliser 80% de notre bénéfice pour planter des arbres.
-              - Et donc compenser gratuitement 20% de la dette écologique de votre trajet rien qu’en passant par Skytree’p.
+              Notre proposition : <br>
+              - Nous utilisons 80% de notre bénéfice pour planter des arbres. <br>
+              - Et donc nous compensons gratuitement et automatiquement 20% de la dette écologique de votre trajet. <br>
               - Vous pouvez en faire plus en donnant davantage. C’est de votre responsabilité.
             </div>
           </div>
@@ -181,12 +181,12 @@
           </ul>
           <div class="collapse" id="collapseExample5">
             <div class="card card-body texte-question">
-              C’est une véritable aubaine pour la planète, parce que :
-              - Vous retirez du Co2 de l’atmosphère.
-              - Vous recréez un écosystème qui sauve notre fragile biodiversité
-              - Vous enrichissez et refroidissez les sols.
-              Cependant la compensation carbone n’est utile que si l’industrie poursuit sa transition vers la neutralité carbone.
-
+              C’est une véritable aubaine pour la planète, parce que : <br>
+              - Vous retirez du Co2 de l’atmosphère. <br>
+              - Vous recréez un écosystème qui sauve notre fragile biodiversité. <br>
+              - Vous enrichissez et refroidissez les sols. <br> <br>
+              Cependant la compensation carbone n’est utile que si l’industrie poursuit sa transition vers la neutralité carbone. <br>
+              <br>
               « Si nous voulons réellement éviter des changements planétaires catastrophiques, nous devons réduire nos émissions de 45 % d’ici à 2030, indique l’ONU Environnement. Or les arbres plantés aujourd’hui ne peuvent pas pousser suffisamment vite pour atteindre cet objectif. »
             </div>
           </div>
