suggestion and home page finished

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,17 +1,24 @@
 // Import your components CSS files here.
 @import "alert";
-@import "navbar";
 @import "base-searchbar";
-@import "searchlist";
-@import "slider";
-@import "transitions";
-@import "details";
-@import "home-searchbar";
 @import "compensation";
+@import "details";
 @import "filter-search";
-@import "loading-spinner";
 @import "footer";
 @import "footer2";
-@import "nophone";
+@import "home-searchbar";
+@import "home-tooltips";
+@import "loading-spinner";
 @import "modal";
+@import "navbar";
 @import "nice-home-example";
+@import "nophone";
+@import "slider";
+@import "transitions";
+
+
+
+
+
+
+
