--- a/app/assets/stylesheets/components/_nice-home-example.scss
+++ b/app/assets/stylesheets/components/_nice-home-example.scss
@@ -35,12 +35,14 @@
 }
 
 .home-example-etape-container {
+  width: 825px;
 	padding: 40px 0px;
-	margin: 20px 0px;
+	margin: 20px auto;
 }
 
 
 .home-example-section-container {
+  position: relative;
   display:flex;
   justify-content:center;
   margin: 20px 40px;
@@ -121,9 +123,10 @@
 
 .slider-title-text {
   width: 130px;
-  margin-right: 30px;
   text-align: right;
-  margin-bottom: 15px;
+  position: absolute;
+  left: -120px;
+  bottom: 15px;
 }
 
 
@@ -150,8 +153,9 @@
 	margin: auto;
 	margin-top: 75px;
 	width: 720px;
-    align-items: center;
-    padding: 10px;
+  align-items: center;
+  padding: 10px;
+  position: relative;
 }
 
 .last-etape-text {
@@ -182,16 +186,17 @@
 }
 
 .slider-main-infos {
-	width: 650px;
-    height: 140px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  width: 650px;
+  height: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position:relative;
 
-    div {
-    	display: flex;
-    	align-items: flex-end;
-    }
+  div {
+  	display: flex;
+  	align-items: flex-end;
+  }
 }
 
 .le-vrai-pouvoir-all-container {
