--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -61,7 +61,7 @@
           </div>
           <div id="home-slider-target-co2" style="width:650px;margin-top:35px;height:12px;margin-bottom:20px;"></div>
         </div>
-        <p class="checkout__button" style="margin-left: 50px;">En savoir plus</p>
+        <%= render 'shared/tooltips/tooltip-co2' %>
       </div>
     </div>
 
@@ -87,7 +87,7 @@
           </div>
           <div id="home-slider-target-arbres" style="width:650px;margin-top:35px;height:12px;margin-bottom:20px;"></div>
         </div>
-        <p class="checkout__button" style="margin-left: 50px;">En savoir plus</p>
+        <%=render 'shared/tooltips/tooltip-arbres' %>
       </div>
     </div>
     <div class="home-example-etape-container">
@@ -97,18 +97,19 @@
       </div>
 
       <div class="home-example-section-container" style="margin-top: 45px;">
-        <p style="width:130px; margin-right:30px; text-align:right;">Compensation :</p>
+        <p class="slider-title-text" style="bottom:-5px;">Compensation :</p>
         <div id="home-slider-target-compensation" style="width:650px;height:12px;"></div>
-        <p class="checkout__button" style="margin-left: 50px;">En savoir plus</p>
+        <%=render 'shared/tooltips/tooltip-compensation' %>
       </div>
     </div>
     <div class="home-example-etape-container">
       <div class="home-example-etape-title last-etape">
         <p class="etape-number">4</p>
         <p class="etape-text last-etape-text">Dernière étape,<br>vous pouvez faire un don à l'une de nos associations partenaires afin de compenser le reste des émissions de co2 de votre trajet.</p>
+        <%=render 'shared/tooltips/tooltip-final-home' %>
       </div>
     </div>
-    <div style="display: flex;justify-content: center;background-image: url(https://res.cloudinary.com/skytreep/image/upload/v1552589614/Free-Forest-Background-Vector-1.jpg);height: 290px;flex-direction: column; align-items: center;background-repeat: no-repeat;background-size: cover;">      
+    <div style="display: flex;justify-content: center;background-image: url(https://res.cloudinary.com/skytreep/image/upload/v1552589614/Free-Forest-Background-Vector-1.jpg);height: 325px;flex-direction: column; align-items: center;background-repeat: no-repeat;background-size: cover;">      
         <a href="#" class="checkout__button go-button-home">C'est parti !</a>
         <a href="#" class="checkout__button go-button-home" style="background-color: #36ACB8;">F.A.Q</a>    
     </div>
