--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -26,6 +26,10 @@ li a {
   text-decoration: none;
 }
 
+.apropos-drop a {
+  color: black !important;
+}
+
 .liste-navbar i {
   color: rgb(27, 105, 166);
 }
