--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,8 +10,20 @@
 
 
       <li class="li-before">
-       <li><i class="far fa-lightbulb"></i></li>
-       <li><%= link_to 'A propos', about_path %></li>
+      <li><i class="far fa-lightbulb"></i></li>
+      <li>
+        <div class="dropdown show">
+          <a class="navba-propos btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            A propos
+          </a>
+
+          <div class="dropdown-menu apropos-drop" aria-labelledby="dropdownMenuLink">
+            <div class="dropdown-item"> <%= link_to 'A propos', about_path %> </div>
+            <div class="dropdown-item"> <%= link_to 'Nos objectifs', objectifs_path %> </div>
+            <div class="dropdown-item"> <%= link_to 'Nos calculs Co2 / Arbres', noscalculs_path %> </div>
+          </div>
+        </div>
+      </li>
      </li>
 
 
