--- a/app/views/pages/objectifs.html.erb
+++ b/app/views/pages/objectifs.html.erb
@@ -9,9 +9,21 @@
 
 
     <li class="li-before">
-    <li><i class="far fa-lightbulb"></i></li>
-    <li><%= link_to 'A propos', about_path %></li>
-    </li>
+      <li><i class="far fa-lightbulb"></i></li>
+      <li>
+        <div class="dropdown show">
+          <a class="navba-propos btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            A propos
+          </a>
+
+          <div class="dropdown-menu apropos-drop" aria-labelledby="dropdownMenuLink">
+            <div class="dropdown-item"> <%= link_to 'A propos', about_path %> </div>
+            <div class="dropdown-item"> <%= link_to 'Nos objectifs', objectifs_path %> </div>
+            <div class="dropdown-item"> <%= link_to 'Nos calculs Co2 / Arbres', noscalculs_path %> </div>
+          </div>
+        </div>
+      </li>
+     </li>
 
 
     <li class="li-before">
@@ -21,11 +33,12 @@
 
     <li class="li-before">
     <li><i class="fas fa-user-ninja"></i></li>
-    <li><% if user_signed_in? %>
-           <%= link_to 'Déconnection', destroy_user_session_path, method: :delete %>
-           <% else %>
-           <%= link_to 'Se connecter', new_user_session_path %>
-          <% end %>
+    <li>
+      <% if user_signed_in? %>
+        <%= link_to 'Déconnection', destroy_user_session_path, method: :delete %>
+        <% else %>
+        <%= link_to 'Se connecter', new_user_session_path %>
+      <% end %>
     </li>
     </li>
 
