--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,18 +8,18 @@
 
 
 
-      <li class="li-before">
-       <li><i class="far fa-lightbulb"></i></li>
-       <li>
+    <li class="li-before">
+      <li><i class="far fa-lightbulb"></i></li>
+      <li>
         <div class="dropdown show">
           <a class="navba-propos btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          A propos
+            A propos
           </a>
 
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" <%= link_to 'A propos', about_path %> </a>
-            <a class="dropdown-item" <%= link_to 'Nos objectifs', objectifs_path %></a>
-            <a class="dropdown-item" href="#">Nos calculs Co2 / Arbres</a>
+          <div class="dropdown-menu apropos-drop" aria-labelledby="dropdownMenuLink">
+            <div class="dropdown-item"> <%= link_to 'A propos', about_path %> </div>
+            <div class="dropdown-item"> <%= link_to 'Nos objectifs', objectifs_path %> </div>
+            <div class="dropdown-item"> <%= link_to 'Nos calculs Co2 / Arbres', noscalculs_path %> </div>
           </div>
         </div>
       </li>
