--- a/app/views/pages/noscalculs.html.erb
+++ b/app/views/pages/noscalculs.html.erb
@@ -63,29 +63,34 @@
   <div>
 
     <div class="titre-page">
-      <h1>Les objectifs de Skytree'p</h1>
+      <h1>Les calculs de Skytree'p</h1>
     </div>
 
     <div class="texte-apropos">
 
       <div class="calcul1">
-        <p>Comment calculons nous le Co2 ?</p>
-        <p>La première donnée dont nous disposons est la distance parcoure. Ensuite, selon la direction générale de l’aviation civile (DGAC), un avion émet environ 110 g Co2 / km / passager. Cependant la DGAC ne prend ni les autres gaz à effet de serres en compte, ni le forçage radiatif. C’est pourquoi nous avons décidé de comparer les calculateurs de Co2 et d’en faire une moyenne.
+        <p class="calcul-titre">Comment calculons nous le Co2 ?</p>
+        <p class="calcul1p2">La première donnée dont nous disposons est la distance parcoure. Ensuite, selon la direction générale de l’aviation civile (DGAC), un avion émet environ 110 g Co2 / km / passager. Cependant la DGAC ne prend ni les autres gaz à effet de serres en compte, ni le forçage radiatif. C’est pourquoi nous avons décidé de comparer les calculateurs de Co2 et d’en faire une moyenne.
         C’est aussi pourquoi nous parlons en tonnes équivalent Co2*.
-
+        <br> <br>
         Voici le tableau comparateur :
         </p>
-        <p>Tableau 1/8</p>
-        <img src="https://res.cloudinary.com/tark-industries/image/upload/v1561996251/Capture_d_e%CC%81cran_2019-07-01_a%CC%80_17.21.11.png">
-        <p>Ainsi nous estimons qu’un avion émet réellement 235 g Co2 / km / passager.
+        <iframe width="95%" height="400" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=4FA57A0EE14DE6A4%2120987&authkey=%21APjmgh9UJJx7Y6U&em=2&wdAllowInteractivity=False&Item='Feuil1'!B1%3AD108&wdHideGridlines=true&wdDownloadButton=True&wdInConfigurator=true"></iframe>
+        <p class="calcul1p4">Ainsi nous estimons qu’un avion émet réellement 235 g Co2 / km / passager.
         Nous allons rapidement implémenter des nouvelles variables comme le taux de remplissage de l’avion, son modèle et donc sa consommation ou encore l’altitude de croisière pour vous offrir un calcul toujours plus exact.
         </p>
-        <a href="#">Télechargez le document excel</a>
       </div>
 
 
       <div class="calcul2">
-
+        <p style="width: 600px;" class="calcul-titre">Comment nous calculons le montant des arbres nécessaire ?
+        </p>
+        <p class="calcul2p2">Pour avoir un réel impact, nous calculons le nombre d’arbres à planter pour qu’ils compensent le Co2 émis en 1 année.
+        Lors de sa première année, l’arbre va absorber 20kg de Co2. Ainsi dans notre calcul, nous estimons que 1 arbre = 20 kg de Co2 retiré de l’atmosphère.
+        </p>
+        <p class="calcul2p3">Au fur et à mesure de sa vie, l’arbre continuera à emmagasiner du Co2 allant jusqu’à avoir stocker 1 tonne à l’issue de ses 50 ans. Le Co2 absorbé en plus n’est pas pris en compte par Skytree’p. Pourquoi ? Il aurait été facile de dire que 1 arbre = 1 tonne, mais il faudrait attendre 50 ans pour que la compensation soit effective ! <br>
+        Skytree’p ne cherchera jamais à vous mentir.
+        </p>
       </div>
 
     </div>
