--- a/app/assets/stylesheets/pages/_noscalculs.scss
+++ b/app/assets/stylesheets/pages/_noscalculs.scss
@@ -1,3 +1,45 @@
-.hey{
-  font-size: 300px;
+.calcul1 {
+  margin-left: 14vw;
+  padding-top: 45px;
+  padding-right: 9vw;
+  font-size: 20px;
+  line-height: 30px;
 }
+
+  .calcul-titre {
+    background: #00C896;
+    border-radius: 8px;
+    color: white;
+    padding: 10px 20px;
+    margin-left: -20px;
+    width: 360px;
+    margin-bottom: 30px;
+  }
+
+  .calcul1 img {
+    margin-top: 0px;
+  }
+
+  .calcul1p4 {
+    padding-top: 30px;
+    padding-bottom: 20px;
+  }
+
+.calcul2 {
+  margin-left: 14vw;
+  padding-top: 45px;
+  padding-right: 14vw;
+  font-size: 20px;
+  line-height: 30px;
+  padding-bottom: 50px;
+}
+
+  .calcul2p2 {
+    padding-bottom: 30px;
+  }
+
+
+
+
+
+
