--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,15 +19,15 @@
     </div>
 
     <div class="foret-fin-section1">
-      <img src="https://res.cloudinary.com/tark-industries/image/upload/v1556560112/forest-back.png">
+      <img src="https://res.cloudinary.com/tark-industries/image/upload/v1560341742/forest_skytreep.png">
     </div>
   </div>
 
   <div class="home-example-main-container">
     <%= render 'shared/home-background' %>
     <div class="home-example-title-container">
-      <img style="height: 100px;" src="https://res.cloudinary.com/tark-industries/image/upload/v1556618787/LOGO_SKYTREE_P_noir.png">
-      <h4>Comment ça marche ?</h3>
+      <img style="height: 110px; margin-top: -50px" src="https://res.cloudinary.com/tark-industries/image/upload/v1556618787/LOGO_SKYTREE_P_noir.png">
+      <h4 style="font-size: 22px;">Comment ça marche ?</h3>
     </div>
     <div class="home-example-etape-container">
       <div class="home-example-etape-title">
@@ -109,9 +109,9 @@
         <%=render 'shared/tooltips/tooltip-final-home' %>
       </div>
     </div>
-    <div style="display: flex;justify-content: center;background-image: url(https://res.cloudinary.com/skytreep/image/upload/v1552589614/Free-Forest-Background-Vector-1.jpg);height: 325px;flex-direction: column; align-items: center;background-repeat: no-repeat;background-size: cover;">      
+    <div style="display: flex;justify-content: center;background-image: url(https://res.cloudinary.com/skytreep/image/upload/v1552589614/Free-Forest-Background-Vector-1.jpg);height: 325px;flex-direction: column; align-items: center;background-repeat: no-repeat;background-size: cover;">
         <a href="#" class="checkout__button go-button-home">C'est parti !</a>
-        <a href="#" class="checkout__button go-button-home" style="background-color: #36ACB8;">F.A.Q</a>    
+        <a href="#" class="checkout__button go-button-home" style="background-color: #36ACB8;">F.A.Q</a>
     </div>
   </div>
 
