--- a/app/views/shared/tooltips/_tooltip-co2.html.erb
+++ b/app/views/shared/tooltips/_tooltip-co2.html.erb
@@ -1,5 +1,5 @@
 <div class="co2-tooltip-control">
-	<p class="checkout__button white-tooltip" id="co2-tooltip" style="margin-left: 50px;" data-toggle="tooltip" data-html="true"  data-placement="top" title='
+	<p class="checkout__button white-tooltip" id="co2-tooltip" style="margin-right: 4vw;" data-toggle="tooltip" data-html="true"  data-placement="top" title='
 		<div>
 			<p>Nous calculons d’abord la distance parcourue. Puis nous estimons qu’en moyenne, un avion rejette 250g de Co2 par Km. </p>
 			<div class="home-tooltip-middle-text"><p>Montant Co2 = 250g x km parcouru.</p></div>
