--- a/app/views/shared/tooltips/_tooltip-final-home.html.erb
+++ b/app/views/shared/tooltips/_tooltip-final-home.html.erb
@@ -1,5 +1,5 @@
 <div class="final-tooltip-control">
-	<p class="checkout__button white-tooltip" id="final-tooltip" style="margin-left: 50px;" data-toggle="tooltip" data-html="true"  data-placement="top" title='
+	<p class="checkout__button white-tooltip" id="final-tooltip" style="margin-right: 4vw;" data-toggle="tooltip" data-html="true"  data-placement="top" title='
 		<div>
 			<p>Si vous souhaitez payer la dette écologique de votre trajet, sélectionnez simplement votre vol sur notre site web. Vous êtes redirigé vers le site de notre partenaire où vous pouvez payer votre vol. </p>
 			<p>Retournez sur la page de vos recherches sur notre site web. La page de la compensation est juste là !</p>
