--- a/app/assets/stylesheets/components/_nice-home-example.scss
+++ b/app/assets/stylesheets/components/_nice-home-example.scss
@@ -35,7 +35,7 @@
 }
 
 .home-example-etape-container {
-  width: 825px;
+  width: 73%;
 	padding: 40px 0px;
 	margin: 20px auto;
 }
@@ -143,7 +143,7 @@
 
 .etape-text {
   width: 650px;
-  font-size: 21px;
+  font-size: 26px;
 }
 
 .last-etape {
@@ -171,7 +171,7 @@
 }
 
 .fly-way-style {
-  width: 300px;
+  width: 52%;
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
@@ -186,7 +186,7 @@
 }
 
 .slider-main-infos {
-  width: 650px;
+  width: 100%;
   height: 140px;
   display: flex;
   flex-direction: column;
@@ -232,4 +232,4 @@
     	margin-bottom: 15px;
     }
 }
-    
+
