--- a/app/assets/stylesheets/components/_home-tooltips.scss
+++ b/app/assets/stylesheets/components/_home-tooltips.scss
@@ -86,7 +86,9 @@
 .final-tooltip-control {
 
 	position: absolute;
-    right: -235px;
+  margin-right: -24vw;
+  right: 0px;
+
 
 	.tooltip-inner {
 		background-color: white;
