--- a/app/assets/stylesheets/components/_nice-home-example.scss
+++ b/app/assets/stylesheets/components/_nice-home-example.scss
@@ -11,6 +11,7 @@
     	width: 120px;
 	    border: 1px solid #E0E0E0;
 	    background-color: #F4F4F4;
+      text-transform: uppercase;
 
       &:hover {
         background-color: rgba(171, 181, 169, 0.7)
@@ -37,7 +38,8 @@
 .home-example-etape-container {
   width: 73%;
 	padding: 40px 0px;
-	margin: 20px auto;
+	margin-right: 17%;
+  margin-left: 10%;
 }
 
 
@@ -50,8 +52,8 @@
 }
 
 .home-example-plane-icon {
-  height: 40px;
-  margin: 0px 15px;
+  height: 45px;
+  margin: 0px 20px;
 }
 
 .etape-number {
@@ -127,6 +129,7 @@
   position: absolute;
   left: -120px;
   bottom: 15px;
+  font-size: 25px;
 }
 
 
@@ -179,14 +182,14 @@
 }
 
 .fly-way-tube {
-  height: 3px;
-    width: 22px;
+    height: 4px;
+    width: 23px;
     border-radius: 19px;
     background-color: #C4C4C4;
 }
 
 .slider-main-infos {
-  width: 100%;
+  width: 58vw;
   height: 140px;
   display: flex;
   flex-direction: column;
