--- a/app/assets/stylesheets/components/_nice-home-example.scss
+++ b/app/assets/stylesheets/components/_nice-home-example.scss
@@ -209,7 +209,8 @@
 .le-vrai-pouvoir-div-container {
 	display: flex;
 	justify-content: space-around;
-	margin: 40px 0px;
+	margin: 40px auto;
+  max-width: 1200px;
 }
 
 .le-vrai-pouvoir-div {
