--- a/app/javascript/components/compensation-slider.css
+++ b/app/javascript/components/compensation-slider.css
@@ -41,3 +41,11 @@
 #trigger-payment:hover {
     background-color: #2DE1B4;
 }
+
+#slider__compensation .noUi-horizontal {
+    height: 14px;
+}
+
+#slider__compensation .noUi-base .noUi-origin .noUi-handle {
+    top: -10px;
+}
